k8s/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: todo-platform-strict
spec:
  mtls:
    mode: STRICT
