k8s/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-myservice
spec:
  selector:
    matchLabels:
      app: myservice
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-myservice-to-myservice2
spec:
  selector:
    matchLabels:
      app: myservice2
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/todo-platform/sa/myservice
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-myservice2-to-postgres
spec:
  selector:
    matchLabels:
      app: postgres
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/todo-platform/sa/myservice2
